# starparse

./: .bzrignore  AUTHORS  ChangeLog  Makefile.am  Makefile.manual  README  TODO  autogen.sh  configure  configure.ac  guile-binding.c  guile-compat.h  lexer.l  parser.y  starparse-env.in  starparse.h  starparse.pc.in
doc/.arch-ids/: =id  hall_1991_326.pdf.id  hall_1994_505.pdf.id  spadaccini_1994_509.pdf.id
example/: 15076.str  Makefile.am  grok-chemical-shifts.scm  star-echo.scm  star-gather.scm  starecho.c
example/.arch-ids/: 15076.str.id  =id  Makefile.am.id  grok-chemical-shifts.scm.id  star-echo.scm.id  star-gather.scm.id  starecho.c.id
example/dynein-light-chain/: 15076_jd_rymrghkc.str  bmr4265.str  bmr4911.str  bmr4912.str  bmr4929.str  bmr4931.str  bmr6096.str  compare-shift-single.scm  compare-shifts.scm  hash-reader  viewer-bmrb
modules/: starparse.scm
modules/.arch-ids/: =id  starparse.scm.id
src/: Makefile.am  guile-binding.c  lexer.l  parser.y  starparse.h
test/: Makefile.am  file-not-found-xfail.test  file-not-found.test  malformed-xfail.test  malformed.str  malformed.test  single-quote.str  single-quote.test
